# monotrypt.android

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  EQ_INTEGRATION_IMPLEMENTATION.md  README.md  ROADMAP.md  all_fatals.txt  build_cmd.txt  build_cmd2.txt  build_cmd3.txt  build_cmd4.txt  build_debug.txt  build_debug_auth_fix.txt  build_debug_auth_fix_2.txt  build_debug_json.txt  build_final.txt  build_release_final.txt  build_release_json.txt  build_release_new.txt  build_release_playlist.txt  build_swipe.txt  build_verif.txt  build_verif2.txt  build_verif_album.txt  build_verif_album2.txt  build_verif_album3.txt  build_verif_album4.txt  build_verif_album5.txt  codebase.md  compass_artifact_wf-78388811-bf3d-40c2-8eec-590610991176_text_markdown.md  compile_err.txt  crash_cmd.txt  crash_log.txt  gradle.properties  keystore.properties.example  kt_err.txt  local.properties.example  monochrome-library-2026-03-23.json  monochrome_log.txt  (+5 more)
.claude/: settings.local.json
.claude/agents/: monotrypt-agent-manager.md  monotrypt-android-expert.md  monotrypt-backend-engineer.md  monotrypt-code-reviewer.md  monotrypt-theme-designer.md  monotrypt-ui-engineer.md
.github/workflows/: build.yml  gradlew.yml  pr-review.yml  release.yml
app/: build.gradle.kts  monotrypt-debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: devedit_default_layout.json  qobuz_recommendations.json
app/src/main/assets/autoeq/targets/: Harman_OE_2018.txt  Moondrop_VDSF.txt
app/src/main/assets/projectm/presets/: README.md
app/src/main/cpp/: CMakeLists.txt  audio_ring_buffer.cpp  audio_ring_buffer.h  projectm_bridge.cpp  projectm_bridge.h  projectm_jni.cpp
app/src/main/cpp/dsp/: dsp_engine.cpp  dsp_engine.h  dsp_jni.cpp  snapin_processor.h  spatial_renderer.cpp  spatial_renderer.h  spatial_renderer_jni.cpp
app/src/main/cpp/dsp/atmos/: AtmosDecoderJni.cpp  BinauralRenderer.cpp  BinauralRenderer.h  ChannelLayout.h  Eac3Decoder.cpp  Eac3Decoder.h  JocReconstructor.cpp  JocReconstructor.h  RoomSimulator.cpp  RoomSimulator.h  VbapPanner.h
app/src/main/cpp/dsp/oxford/: oxford_dsp.h  oxford_jni.cpp
app/src/main/cpp/dsp/snapins/: bitcrush.h  channel_mixer.h  chorus.h  comb_filter.h  compactor.h  compressor.h  delay.h  distortion.h  dynamics.h  ensemble.h  eq_10band.h  eq_3band.h  filter.h  flanger.h  formant_filter.h  frequency_shifter.h  gain.h  gate.h  haas.h  ladder_filter.h  limiter.h  nonlinear_filter.h  phase_distortion.h  phaser.h  pitch_shifter.h  resonator.h  reverb.h  reverser.h  ring_mod.h  shaper.h  stereo.h  tape_stop.h  trance_gate.h  transient_shaper.h
app/src/main/cpp/dsp/util/: allpass.h  biquad.h  crossfade_buffer.h  dc_blocker.h  delay_line.h  envelope_follower.h  hilbert.h  lfo.h  lookahead_buffer.h  oversampler.h  parameter_smoother.h  transfer_curve.h
app/src/main/cpp/usb/: libusb_uac_driver.cpp  libusb_uac_driver.h  usb_jni.cpp
app/src/main/java/tf/monochrome/android/: MonochromeApp.kt
app/src/main/java/tf/monochrome/android/audio/: UsbAudioRouter.kt
app/src/main/java/tf/monochrome/android/audio/dsp/: DspEngineManager.kt  DspNativeLoader.kt  MixBusProcessor.kt  SnapinType.kt  SpatialAudioProcessor.kt
app/src/main/java/tf/monochrome/android/audio/eq/: AutoEqEngine.kt  AutoEqProcessor.kt  EqDataParser.kt  EqProcessor.kt  FrequencyTargets.kt  ParametricEqProcessor.kt  SpectrumAnalyzerTap.kt
app/src/main/java/tf/monochrome/android/audio/usb/: AudioProcessorChain.kt  BypassDiagnostics.kt  BypassSelfTest.kt  BypassTelemetry.kt  BypassVolumeController.kt  LibusbAudioSink.kt  LibusbUacDriver.kt  (+4 more)
app/src/main/java/tf/monochrome/android/auto/: MonochromeMediaBrowserService.kt
app/src/main/java/tf/monochrome/android/debug/: CrashLogger.kt  DebugLogBuffer.kt  DebugLogCollector.kt  DebugLogEntry.kt
app/src/main/java/tf/monochrome/android/devedit/: DevEdit.kt  DevEditController.kt  DevEditModels.kt  DevEditRepository.kt
app/src/main/java/tf/monochrome/android/di/: ApiModule.kt  AppModule.kt  DatabaseModule.kt  DspModule.kt  NetworkModule.kt  PerformanceModule.kt
app/src/main/java/tf/monochrome/android/performance/: DeviceCapabilities.kt  PerformanceLocals.kt  PerformanceProfile.kt
app/src/main/java/tf/monochrome/android/player/: DynamicLoadControl.kt  ImportanceMediaCodecAdapterFactory.kt  PlaySessionManager.kt  PlaybackCommand.kt  PlaybackCoordinator.kt  PlaybackService.kt  QueueForwardingPlayer.kt  QueueManager.kt  ReplayGainProcessor.kt  StreamResolver.kt  UnifiedTrackRegistry.kt
app/src/main/java/tf/monochrome/android/radio/: RadioQueueManager.kt  RadioSeedBuilder.kt  RadioViewModel.kt  TrackResolver.kt
app/src/main/java/tf/monochrome/android/share/: TrackShareHelper.kt
app/src/main/java/tf/monochrome/android/util/: DeterministicIdGenerator.kt  RomajiConverter.kt
app/src/main/java/tf/monochrome/android/visualizer/: ProjectMAssetInstaller.kt  ProjectMAudioBus.kt  ProjectMAudioTapProcessor.kt  ProjectMEngineRepository.kt  ProjectMNativeBridge.kt  ProjectMPresetCatalog.kt  ProjectMRendererView.kt
app/src/main/java/tf/monochrome/android/widget/: NowPlayingWidgetReceiver.kt
app/src/main/res/drawable/: ic_kofi.xml  ic_launcher_foreground.xml  ic_soundcloud.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  now_playing_widget_info.xml
app/src/test/java/tf/monochrome/android/player/: PlaybackCoordinatorTest.kt  QueueManagerTest.kt
app/src/test/java/tf/monochrome/android/radio/: RadioKeyTest.kt
app/src/test/java/tf/monochrome/android/util/: DeterministicIdGeneratorTest.kt
docs/: projectm-android-integration.md  usb-dac-bit-perfect-verification.md  usb-dac-phase-a-reproductions.md  usb-dac-phase-d-regression-protocol.md
docs/supabase/: phase1_catalog_profiles_playevents.sql  phase1b_ensure_catalog_track_rpc.sql  phase2_history_unified_json.sql  play_events.sql  security_hardening.sql
gradle/: libs.versions.toml
scripts/: pr_review.py  requirements.txt
tools/audio-test-corpus/: generate.sh
tools/bit-perfect/: README.md  pcap_to_pcm.py  pcm_diff.py  verify_bit_perfect.sh
(+250 files in other folders)
